<resources>
    <string name="app_name">Creator\'Society</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_to">Welcome to</string>
    <string name="the_creator_society">The Creator\'Society</string>
    <string name="to_create_is_to_breathe_life_into_your_thoughts">To create is to breathe life into your thoughts.</string>
    <string name="to_share_is_to_build_a_world_beyond_yourself">To share is to build a world beyond yourself.</string>
    <string name="unfold_the_canvas">Unfold The Canvas</string>
    <string name="step_into_a_world_where_art_meets_community_create_share_and_inspire_your_journey_begins_here">Step into a world where art meets community. Create, share, and inspire — your journey begins here.</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="Copyrights">Protecting your work is essential in the digital world. Copyright grants you exclusive rights to reproduce, distribute, and display your creations. Licensing allows others to use your work under specific terms. Understand the differences between exclusive and non-exclusive licensing. Registering your copyright can provide legal advantages in case of disputes. Watermarking and metadata embedding can help deter unauthorized use. Clearly define usage rights before selling or sharing your work. Consider Creative Commons licenses for flexible permissions. Contracts should outline rights, royalties, and usage limitations. Stay informed about copyright laws in your country.</string>
    <string name="Pricing_Guide">Setting the right price for your work is crucial for success. Consider factors like production costs, time investment, and market demand. Research competitor pricing and adjust based on uniqueness and quality. Offering tiered pricing can attract a wider audience. Experiment with discounts or limited-time offers to boost sales. Always factor in platform fees and taxes before finalizing a price. Transparency builds trust—clearly outline your pricing strategy. Regularly review and update prices based on customer feedback. Ensure your pricing aligns with perceived value.</string>
    <string name="canva">Canva offers a user-friendly online tool specifically designed for creating mood boards. With its drag-and-drop interface and extensive library of images, fonts, and design elements, you can craft personalized inspiration boards effortlessly. Canva also provides a variety of templates to get you started.</string>
    <string name="pinterest">Pinterest is a widely-used platform where users can discover and save ideas on various topics, including art and design. You can create your own boards to collect images and links that inspire you, or explore boards curated by others for fresh ideas. It\'s an excellent resource for gathering visual inspiration across diverse styles and mediums.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>