<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_beige"
    tools:context=".SignUpActivity">

    <!-- sign up -->

    <!-- i/p field- full name -->


    <!-- i/p email-->

    <!-- i/p password-->

    <!-- Confirm Password -->

    <TextView
        android:id="@+id/log_inTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/libre_baskerville_bold"
        android:text="Sign Up"
        android:textColor="@color/brand_0"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="@+id/log_inTxt"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/log_inTxt"
        app:layout_constraintTop_toBottomOf="@+id/log_inTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/email_id"
            android:textColor="@color/brand_0"
            android:textColorLink="@color/brand_5" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sign Up Button -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/brand_0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/password"
            android:shadowColor="@null"
            android:textColor="@color/brand_0"
            android:textColorLink="@color/brand_5" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Link to Login Screen -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_cpassword"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/brand_0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/confirm_password"
            android:textColor="@color/brand_0"
            android:textColorLink="@color/brand_5"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/brand_0"
        android:fontFamily="@font/poppins_bold"
        android:foregroundGravity="center"
        android:text="Sign Up"
        android:textColor="@color/brand_beige"
        android:textColorLink="@color/brand_3"
        android:textSize="16sp"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="@+id/et_cpassword"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/et_cpassword"
        app:layout_constraintTop_toBottomOf="@+id/et_cpassword" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/brand_0"
        android:textColorLink="@color/brand_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_signup"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/btn_signup"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>
